add node packages

--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "tes-psikologi-enterpreneur",
   "version": "1.0.0",
   "description": "buaat tugas bapak",
-  "main": "script.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node -r dotenv/config ./src/server.js",
+    "dev": "nodemon -r dotenv/config ./src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "dotenv": "^16.4.5",
+    "nodemon": "^3.1.4"
+  },
   "dependencies": {
-    "@vercel/kv": "^2.0.0"
+    "ejs": "^3.1.10",
+    "express": "^4.21.0",
+    "mongoose": "^8.6.2"
   }
 }
