--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "tes-psikologi-enterpreneur",
-  "version": "1.0.0",
-  "description": "buaat tugas bapak",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "node -r dotenv/config ./src/server.js",
-    "dev": "nodemon -r dotenv/config ./src/server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "dotenv": "^16.4.5",
-    "nodemon": "^3.1.4"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^4.21.0",
-    "mongoose": "^8.6.2"
+    "mongoose": "^8.6.2",
+    "next": "14.2.11",
+    "react": "^18",
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
