--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/lab": "^6.0.0-beta.10",
     "@mui/material": "^6.1.1",
+    "jose": "^5.9.3",
     "mongoose": "^8.6.2",
+    "nanoid": "^5.0.7",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18"
